April 30th update.

--- a/www/the_book/amh-fwd.htm
+++ b/www/the_book/amh-fwd.htm
@@ -14,12 +14,12 @@ This publication may be accessed from --<ol type="a">
 <li><b>Christ in All the Scriptures</b>, by A.M. Hodgkin.<br>
 This publication may be accessed from --<ol type="a">
 <li>the <i>Intro &amp; Resource Menu</i> where it is listed by its full name;
-<li>the list of ''NT Books'' where its closing chapters form the ''Sketches'' of New Testament books.</ol></ol>
+<li>the list of ''NT Books'' where its closing chapters form the ''Sketches'' of New Testament books.</ol></ol><dt>&nbsp;
 <dt>As mentioned, these publications are similar, in that they each provide relatively brief overviews of the individual books of the Bible, with an emphasis on the ''types'' (pictures) of Christ found in each book. However, these two publications are distinct in their approach and style, and they often provide unique insights. <dd><ul>
 <li>Paul Van Gorder's book is more concise. It provides an outline of each book, and helps the reader to understand the flow of Old Testament history.
-<li>A.M. Hodgkin's book is written in an older style. Modern readers may find it somewhat wordy in places. This author assumes that the reader has a good grasp of the flow of the OT story. However, in many places, this author provides a fuller explanation and application of the ''types'' of Christ. </ul>
-<dd>If you are new to the Scriptures, you probably will benefit most by reading Paul Van Gorder's book first. But don't stop there. A.M. Hodgkin's book will richly reward the reader, who seeks to know the Lord.<br>
-<dt>These publications are used with the permission of the copyright holders. 
+<li>A.M. Hodgkin's book is written in an older style. Modern readers may find it somewhat wordy in places. This author assumes that the reader has a good grasp of the flow of the OT story. However, in many places, this author provides a fuller explanation and application of the ''types'' of Christ. Be sure to read the two introductory chapters.</ul><dd>&nbsp;
+<dd>If you are new to the Scriptures, you probably will benefit most by reading Paul Van Gorder's book first. But don't stop there. A.M. Hodgkin's book will richly reward the reader, who seeks to know the Lord. [The editor's <i>Book Notes</i> provide somewhat deeper verse by verse studies of many Bible books. These can be accessed from the <i>Book Notes</i> button, and also from the list of Bible books, using the 'Notes' links.]<dd>&nbsp;
+<dt>The two publications, noted above, are used with the permission of the copyright holders. 
 <dd>We have reformatted the author's text into HTML, adding active links to all scripture references. While we have not edited the original textual content in any way, we have occasionally made corrections to typographical errors in the original (eg., spelling, misdesignated scripture references, etc.). In some places, we have added scripture references, and/or explanatory notes to support the author's discussion. Occasionally,  in A.M. Hodgkin's work, archaic words have been updated. All such editorial changes from the original are shown in brackets [like this]. The frequent updating of archaic spelling, in A.M. Hodgkin's work, is <i>not</i> bracketed.
 </dl>
 <hr width=60% align=center size=1>
