--- a/www/the_book/amh-obad.htm
+++ b/www/the_book/amh-obad.htm
@@ -7,19 +7,18 @@
 <center><b>Christ in All the Scriptures</b><br>
 by A.M. Hodgkin</center>
 <dt><b>V. Christ in the Prophets<br>
-11. <a href="obad1.htm#1" target="lwr_lt">Obadiah --</a></b><br>
-<dd>Between the Gulf of Akaba and the Dead Sea, lies a range of precipitous red sandstone heights, known as Mount Seir.<br><br>
-Here, Esau settled after he had despised his birthright, and his descendants, having driven out the Horites (<a href="gen14.htm#6">Gen 14:6</a>), occupied the whole of the mountain (<a href="deu2.htm#12">Deu 2:12</a>). The capital city Selah, or Petra [meaning] ''Rock,'' was a city unique of its kind amid the works of man. Perched like an eagle's nest (<a href="obad1.htm#4" target="lwr_lt">v.4</a>) amid inaccessible mountain fastnesses, the dwellings were mostly caves, hewn out of the soft rock (<a href="obad1.htm#3" target="lwr_lt">v.3,6</a>), and placed where you could scarce imagine a human foot could climb.<br>
+11. <a href="obad1.htm#1" target="lwr_lt">Obadiah --</a></b>
+<dd>Between the Gulf of Akaba [ie., Aqaba] and the Dead Sea, lies a range of precipitous red sandstone heights, known as Mount Seir.<p>
+Here, Esau settled after he had despised his birthright, and his descendants, having driven out the Horites (<a href="gen14.htm#6">Gen 14:6</a>), occupied the whole of the mountain (<a href="deu2.htm#12">Deu 2:12</a>). The capital city Selah, or Petra [meaning] ''Rock,'' was a city unique of its kind amid the works of man. Perched like an eagle's nest (<a href="obad1.htm#4" target="lwr_lt">v.4</a>) amid inaccessible mountain fastnesses, the dwellings were mostly caves, hewn out of the soft rock (<a href="obad1.htm#3" target="lwr_lt">v.3,6</a>), and placed where you could scarce imagine a human foot could climb.</p>
 <dt><b>Judgment of Edom.</b>
-<dd>Against this people the prophecy of the unknown prophet Obadiah, [meaning] ''a worshipper of Jehovah,'' was directed.<br><br>
-To Israel, God had commanded (<a href="deu23.htm#7">Deu 23:7</a>), ''Thou shalt not abhor an Edomite; for he is thy brother.'' But Edom had shown an implacable hatred to Israel from the time that Edom refused Israel a passage through his country on the way from Egypt to Canaan (<a href="num20.htm#14">Num 20:14-21</a>) to the day of the destruction of Jerusalem by the Chaldeans, when Edom malignantly cried ''Rase it, rase it'' (<a href="psa137.htm#7">Psa 137:7</a>).<br><br>
-For this pride and cruel hatred, the total destruction of Edom was decreed (<a href="obad1.htm#3" target="lwr_lt">v.3,4,10</a>). The people were driven from their rocky home five years after the destruction of Jerusalem, when Nebuchadnezzar, passing down the valley of Arabah, which formed the military road to Egypt, crushed the Edomites. They lost their existence as a nation about a century and a half B.C., and their name perished at the capture of Jerusalem by the Romans. ''As thou hast done, it shall be done unto thee.''<br>
+<dd>Against this people the prophecy of the unknown prophet Obadiah, [meaning] ''a worshipper of Jehovah,'' was directed.<p>
+To Israel, God had commanded (<a href="deu23.htm#7">Deu 23:7</a>), ''Thou shalt not abhor an Edomite; for he is thy brother.'' But Edom had shown an implacable hatred to Israel, from the time that Edom refused Israel a passage through his country on the way from Egypt to Canaan (<a href="num20.htm#14">Num 20:14-21</a>), to the day of the destruction of Jerusalem by the Chaldeans, when Edom malignantly cried ''Rase it, rase it'' (<a href="psa137.htm#7">Psa 137:7</a>).</p><p>
+For this pride and cruel hatred, the total destruction of Edom was decreed (<a href="obad1.htm#3" target="lwr_lt">v.3,4,10</a>). The people were driven from their rocky home five years after the destruction of Jerusalem, when Nebuchadnezzar, passing down the valley of Arabah, which formed the military road to Egypt, crushed the Edomites. They lost their existence as a nation about a century and a half B.C., and their name perished at the capture of Jerusalem by the Romans. ''As thou hast done, it shall be done unto thee.''</p>
 <dt><b>Deliverance for Israel.</b>
-<dd>The book closes with the promise of deliverance for Zion: ''And the House of Jacob shall possess their possessions'' [v.17]. ''The first step in the future successes of the Jews is the recovery of what was previously their own'' (<i>Speaker's Commentary</i>).<br><br>
-Obadiah predicts the coming of the Day of the Lord and the establishment of Messiah's kingdom.
-</dl>
+<dd>The book closes with the promise of deliverance for Zion: ''And the House of Jacob shall possess their possessions'' [v.17]. ''The first step in the future successes of the Jews is the recovery of what was previously their own'' (<i>Speaker's Commentary</i>).<p>
+Obadiah predicts the coming of the Day of the Lord and the establishment of Messiah's kingdom.</p></dl>
 <hr width=60% align=center size=1>
-<center>Return to the Table of Contents for <a href="amh_tc.htm" target="lwr_lt">Christ in All the Scriptures</a>.<br><br>For another brief look at this book of the Bible,<br> see the related chapter in <a href="int_menu.htm#refl" target="lwr_lt">OT Reflections of Christ</a>, by Paul Van Gorder.<br><br>
+<center>For a verse by verse study of Obadiah, see the <a href="obadmenu.htm" target="lwr_lt"><i>Book Notes</i> on Obadiah</a>.<br><br>Return to the Table of Contents for <a href="amh_tc.htm" target="lwr_lt">Christ in All the Scriptures</a>.<br><br>For another brief look at this book of the Bible,<br> see the related chapter in <a href="int_menu.htm#refl" target="lwr_lt">OT Reflections of Christ</a>, by Paul Van Gorder.<br><br>
 Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
 </body>
 </html>
