--- a/www/the_book/amh-rev.htm
+++ b/www/the_book/amh-rev.htm
@@ -6,37 +6,38 @@
 <body><dl><a name="act"></a>
 <center><b>Christ in All the Scriptures</b><br>
 by A.M. Hodgkin</center>
-<dt><b>VIII. Christ in Future Glory<br>
+<dt><b>VIII. Christ in Future Glory
 <dt><a href="rev1.htm#1">Revelation</a> -- Christ the Lamb of God</b>
-<dd>The majestic presence of the eternal Son of God fills the last book of the Bible with the glimpse it gives us of His glory throughout the eternal future, Jesus Christ, the same yesterday, and today, and for ever; one with the Father and with the Holy Spirit. [<a href="heb13.htm#8" target="lwr_rt">Heb 13:8</a>]<br>''Holy, holy, holy, Lord God Almighty, which was, and is, and is to come.'' [<a href="rev4.htm#8">Rev 4:8</a>; <a href="isa6.htm#3" target="lwr_rt">Isa 6:3</a>]<br>''The Lamb is all the glory in Immanuel's Land.'' [hymn: ''The Sands of Time are Sinking...'']<br><br>
-<a href="rev13.htm#8">Rev 13:8</a> takes us back to the earliest ages: <br>''The Lamb slain (in the purpose of God) from the foundation of the world.''<br><br>
-<a href="rev5.htm#6">Rev 5:6</a>. John's vision of the future shows us till all eternity ''a Lamb as it had been slain.''<br><br>
-Between these two records, lies the progressive teaching of the whole Bible with regard to the Lamb of God. <ul><ul><li>Abel's lamb; <li>Abraham's words, ''God will provide Himself a Lamb,'' <br>prefigured in the sacrifice of his beloved son; <li>the ram caught in the thicket, sacrificed in his stead. <li>The Passover Lamb; <li>the two goats on the day of the Atonement. <li>The Lamb of <a href="isa53.htm#7" target="lwr_rt">Isaiah 53</a> is seen to prefigure a person, the coming Messiah. <li>The words of John the Baptist, recorded by this same John [who wrote the Revelation] in his Gospel: ''Behold the Lamb of God, which beareth away the sin of the world!'' [<a href="joh1.htm#29" target="lwr_rt">John 1:29</a>].</ul></ul><dd>God's eternal purpose for our salvation is seen behind all these Scriptures. <br>''It is this book [Revelation] which contains the title of 'Lamb' no less than twenty-six times, emphasizing thereby the increasing value of the sacrificial nature of Christ in the last dark times.'' [Rev. Charles Fox in <i>The Spiritual Grasp of the Epistles</i>]<br><br><dir>
-<li><a href="rev5.htm#5">Rev 5:5,6</a>. <i>The Lamb is</i> one with <i>the Lion of the tribe of Judah.</i> John looked up, expecting to see a Lion, and he saw a Lamb as it had been slain. The same thought is brought out in that remarkable expression ''the wrath of the Lamb'' (<a href="rev6.htm#16">6:16</a>). In connection with this we may note that the strongest words, relative to future judgment, fell from the lips of Him who was perfect love. [eg. <a href="mat23.htm#13" target="lwr_rt">Mat 23:13-33</a>; <a href="joh8.htm#23" target="lwr_rt">Joh 8:23,24,44,45</a>]
-<li><a href="rev7.htm#14">Rev 7:14</a>. <i>Salvation through the blood of the Lamb.</i>
-<li><a href="rev12.htm#11">Rev 12:11</a>. <i>Victory through the blood of the Lamb.</i>
-<li><a href="rev5.htm#9">Rev 5:9-13</a>. The new song of eternity will be <i>''Worthy is the Lamb that was slain.''</i>
-<li><a href="rev5.htm#8">Rev 5:8</a>. <i>The worship of the Lamb.</i>
-<li><a href="rev7.htm#17">Rev 7:17</a>. <i>The Lamb</i> identified with the <i>Good Shepherd</i> of John's Gospel [<a href="joh10.htm#1" target="lwr_rt">John 10</a>].
-<li><a href="rev13.htm#8">Rev 13:8</a>. <i>The Lamb's book of life</i> (<a href="rev21.htm#27">21:27</a>; <a href="rev22.htm#19">22:19</a>).
-<li><a href="rev14.htm#1">Rev 14:1-4</a>. <i>The faithful followers of the Lamb.</i>
-<li><a href="rev17.htm#14">Rev 17:14</a>. <i>The victory of the Lamb</i> over all His enemies.
-<li><a href="rev19.htm#13">Rev 19:13,16</a>. <i>The Lamb is</i> identified with <i>the Word of God</i> of John's Gospel [<a href="joh1.htm#1" target="lwr_rt">John 1:1,2,14</a>].
-<li><a href="rev19.htm#7">Rev 19:7,9</a> and <a href="rev21.htm#1">21:1-9</a>. <i>The bride of the Lamb,</i> and the <i>Marriage Supper of the Lamb,</i> identifying Him with the <i>Bridegroom</i> of John's Gospel [<a href="joh3.htm#27" target="lwr_rt">John 3:27-30</a>].
-<li><a href="rev21.htm#22">Rev 21:22</a>. <i>The Lamb and the Lord God Almighty are the Temple of the New Jerusalem.</i>
-<li><a href="rev21.htm#23">Rev 21:23</a>. <i>The Lamb is the Light of the heavenly city,</i> identifying Him with the<i> Light of the World </i>in John's Gospel [<a href="joh1.htm#4" target="lwr_rt">John 1:4,5,9</a>; <a href="joh3.htm#19" target="lwr_rt">3:19</a>; <a href="joh8.htm#12" target="lwr_rt">8:12</a>; <a href="joh9.htm#5" target="lwr_rt">9:5</a>].</dir><br>
-<dd><table width=95% cellpadding=1 cellspacing=1>
+<dd>The majestic presence of the eternal Son of God fills the last book of the Bible with the glimpse it gives us of His glory throughout the eternal future, Jesus Christ, the same yesterday, and today, and for ever; one with the Father and with the Holy Spirit. [<a href="heb13.htm#8" target="lwr_rt">Heb 13:8</a>]<br>''Holy, holy, holy, Lord God Almighty, which was, and is, and is to come.'' [<a href="rev4.htm#8">Rev 4:8</a>; <a href="isa6.htm#3" target="lwr_rt">Isa 6:3</a>]<br>''The Lamb is all the glory in Immanuel's Land.'' [hymn: ''The Sands of Time are Sinking...'']<p>
+<a href="rev13.htm#8">Rev 13:8</a> takes us back to the earliest ages: <br>''The Lamb slain (in the purpose of God) from the foundation of the world.''</p><p>
+<a href="rev5.htm#6">Rev 5:6</a> - John's vision of the future shows us till all eternity ''a Lamb as it had been slain.''</p>
+<dd>Between these two records, lies the progressive teaching of the whole Bible with regard to the Lamb of God.<ul><li>Abel's lamb;<li>Abraham's words, ''God will provide Himself a Lamb,''<dd>prefigured in the sacrifice of his beloved son; <li>the ram caught in the thicket, sacrificed in his stead.</dd><li>The Passover Lamb;<li>the two goats on the day of the Atonement.<li>The Lamb of <a href="isa53.htm#7" target="lwr_rt">Isaiah 53</a> is seen to prefigure a person, the coming Messiah.<li>The words of John the Baptist, recorded by this same John [who wrote the Revelation] in his Gospel: ''Behold the Lamb of God, which beareth away the sin of the world!'' [<a href="joh1.htm#29" target="lwr_rt">John 1:29</a>].</ul><dd>&nbsp;
+<dd>God's eternal purpose for our salvation is seen behind all these Scriptures.<br>''It is this book [Revelation] which contains the title of 'Lamb' no less than twenty-six times, emphasizing thereby the increasing value of the sacrificial nature of Christ in the last dark times.'' [Rev. Charles Fox in <i>The Spiritual Grasp of the Epistles</i>]<br><br><ul>
+<li><a href="rev5.htm#5">Rev 5:5,6</a> - <i>The Lamb is</i> one with <i>the Lion of the tribe of Judah.</i> John looked up, expecting to see a Lion, and he saw a Lamb as it had been slain. The same thought is brought out in that remarkable expression ''the wrath of the Lamb'' (<a href="rev6.htm#16">6:16</a>). In connection with this, we may note that the strongest words, relative to future judgment, fell from the lips of Him who was perfect love. [eg. <a href="mat23.htm#13" target="lwr_rt">Mat 23:13-33</a>; <a href="joh8.htm#23" target="lwr_rt">Joh 8:23,24,44,45</a>]
+<li><a href="rev7.htm#14">Rev 7:14</a> - <i>Salvation through the blood of the Lamb.</i>
+<li><a href="rev12.htm#11">Rev 12:11</a> - <i>Victory through the blood of the Lamb.</i>
+<li><a href="rev5.htm#9">Rev 5:9-13</a> - The new song of eternity will be <i>''Worthy is the Lamb that was slain.''</i>
+<li><a href="rev5.htm#8">Rev 5:8</a> - <i>The worship of the Lamb.</i>
+<li><a href="rev7.htm#17">Rev 7:17</a> - <i>The Lamb</i> identified with the <i>Good Shepherd</i> of John's Gospel [<a href="joh10.htm#1" target="lwr_rt">John 10</a>].
+<li><a href="rev13.htm#8">Rev 13:8</a> - <i>The Lamb's book of life</i> (<a href="rev21.htm#27">21:27</a>; <a href="rev22.htm#19">22:19</a>).
+<li><a href="rev14.htm#1">Rev 14:1-4</a> - <i>The faithful followers of the Lamb.</i>
+<li><a href="rev17.htm#14">Rev 17:14</a> - <i>The victory of the Lamb</i> over all His enemies.
+<li><a href="rev19.htm#13">Rev 19:13,16</a> - <i>The Lamb is</i> identified with <i>the Word of God</i> of John's Gospel [<a href="joh1.htm#1" target="lwr_rt">John 1:1,2,14</a>].
+<li><a href="rev19.htm#7">Rev 19:7,9</a> and <a href="rev21.htm#1">21:1-9</a> - <i>The bride of the Lamb,</i> and the <i>Marriage Supper of the Lamb,</i> identifying Him with the <i>Bridegroom</i> of John's Gospel [<a href="joh3.htm#27" target="lwr_rt">John 3:27-30</a>].
+<li><a href="rev21.htm#22">Rev 21:22</a> - <i>The Lamb and the Lord God Almighty are the Temple of the New Jerusalem.</i>
+<li><a href="rev21.htm#23">Rev 21:23</a> - <i>The Lamb is the Light of the heavenly city,</i> identifying Him with the<i> Light of the World </i>in John's Gospel [<a href="joh1.htm#4" target="lwr_rt">John 1:4,5,9</a>; <a href="joh3.htm#19" target="lwr_rt">3:19</a>; <a href="joh8.htm#12" target="lwr_rt">8:12</a>; <a href="joh9.htm#5" target="lwr_rt">9:5</a>].</ul><br>
+<dd><table width=95% border=1 cellpadding=1 cellspacing=1>
 <tr><td><b>Genesis</b></td><td><b>Revelation</b></td></tr>
 <tr><td>Paradise Lost</td><td>Paradise Regained</td></tr>
 <tr><td>Creation of heaven and earth.</td><td>A new heaven and a new earth.</td></tr>
 <tr><td>The curse enters--<br>Sin, Sorrow, Suffering, Death.</td><td>No more curse--<br>No more Sin, Sorrow, Suffering, Death.</td></tr>
 <tr><td>Tree of Life guarded.</td><td>Tree of Life restored.</td></tr>
-<tr><td>Four rivers watering the garden.</td><td>A pure river of water of life.</td></tr>
-</table><br>
-<dd>The <a href="rev22.htm#1">last chapter</a> contains Christ's thrice uttered word, His last recorded word to His Church,<center><b>''Behold, I come quickly.''</b><br>''Amen. Even so, come, Lord Jesus.''</center><br><br>
-[For further study of ''the Revelation'', see the <a href="rev_menu.htm" target="lwr_lt"><i>Book Notes</i> on Revelation</a>.]
-</dl>
+<tr><td>Four rivers watering the garden.</td><td>A pure river of water of life.</td></tr></table><dd>&nbsp;
+<dd>The <a href="rev22.htm#1">last chapter</a> contains Christ's thrice uttered word, His last recorded word to His Church...</dl>
+<center><b>''Behold, I come quickly.''</b><br>''Amen. Even so, come, Lord Jesus.''</center><br>
 <hr width=60% align=center size=1>
-<center>Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
+<center>For a verse by verse study of ''the Revelation'', see the <a href="rev_menu.htm" target="lwr_lt"><i>Book Notes</i> on Revelation</a>.<br><br>
+Return to the Table of Contents for <a href="amh_tc.htm" target="lwr_lt">Christ in All the Scriptures</a>.<br><br>
+Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
 </body>
 </html>
