--- a/www/the_book/eph_menu.htm
+++ b/www/the_book/eph_menu.htm
@@ -9,7 +9,7 @@
 <dt><b>Ephesians -</b><br>
 <dt><b>The Church of Christ - The Fullness of His Body.</b><br>
 <dt>1. Greetings (<a href="eph1an.htm" target="upper">Ephesians 1</a>:1,2)
-<dt>2. The believer's Position &quot;in Christ&quot; <ol type="A">
+<dt>2. The Position of Believers: &quot;in Christ&quot; <ol type="A">
 <li>Chosen and Sealed, in Christ (Eph 1:3-23)<ul>
 <li>According to God's purpose, revealed in Christ (v.1-14)
 <li>A prayer for understanding of God's power, in Christ (v.15-23)</ul>
