--- a/www/the_book/ot_tc.htm
+++ b/www/the_book/ot_tc.htm
@@ -1,6 +1,6 @@
 <html>
 <head><title>Books of the Old Testament</title><base target="lwr_rt"></head>
-<body bgcolor="00ff7f">
+<body bgcolor="80ffff">
 <center><b>Books of the Old Testament </b></center>
 <p>The books of the Old Testament are listed below in the order that they appear in the Christian Bible. They fall into several categories of literature, beginning with 'History.' [See the notes at the end of this page, concerning <a href="#abbrev" target="lwr_lt">abbreviations of book names</a>, and concerning the order of <a href="#hborder" target="lwr_lt">books as arranged in the Hebrew Bible</a>.]</p>
 <i><a href="littype.htm#OT-H" target="upper">History</a></i><dir>
