--- a/www/the_book/ps110n.htm
+++ b/www/the_book/ps110n.htm
@@ -15,9 +15,10 @@ Sit thou at my right hand, until I make thine enemies thy footstool.</b></i> </d
 <dt>Today, Jesus is seated at the right hand of the Father, 
 <dd>awaiting the set time when He will judge the earth. <a href="mar13.htm#32">Mark 13:32-37</a>
 <dd>No matter how we rebel against Him, no matter how we shut Him out of our lives (even to the point of crucifying Him), He is who He is. 
-<dd>David called Him &quot;my Lord.&quot; But is He your Lord?
-<dt>thy footstool - ie., stamped under thy feet.
-<dd>cp. <a href="1cor15.htm#24">1Cor 15:24-28</a>; <a href="php2.htm#9">Php 2:9-11</a>; <a href="eph1.htm#20">Eph 1:20-22</a></dl>
+<dt>thine enemies thy footstool - ie., stamped under thy feet.
+<dd>cp. <a href="1cor15.htm#24">1Cor 15:24-28</a>; <a href="php2.htm#9">Php 2:9-11</a>; <a href="eph1.htm#20">Eph 1:20-22</a>
+<dt>David called Him &quot;my Lord.&quot; But is He your Lord?
+<dd>When He comes again, you will either be with Him in glory, or crushed under His feet.</dl>
 <dt><i><b>110:2 The LORD shall send the rod of thy strength out of Zion:<br>
 rule thou in the midst of thine enemies. </b></i>
 </dt><dl><dt>The day is coming when the Messiah will return from where He is seated at the right hand of God (in the heavenly Zion, <a href="rom11.htm#26">Rom 11:26,27</a>), to rule the world from Jerusalem (the earthly Zion). 
@@ -29,16 +30,17 @@ rule thou in the midst of thine enemies. </b></i>
 <dt>Who will they see? What will they say to Him? </dl>
 <dt><i><b>in the beauties of holiness from the womb of the morning:<br>
 thou hast the dew of thy youth. </b></i></dt><dl>
-<dt>At first reading, the meaning is unclear.<dd>Some of the newer translations have attempted to make this verse more readable.<dd>For example, the NASV: 
-<dd>&quot;In holy array, from the womb of the dawn, thy young men are to thee as the dew.&quot;<br>However, this obscures the meaning by shifting focus from the Lord to an army of men. This is inconsistent with the rest of the Psalm, which never glances away from David's Lord. 
-<dt>the beauties of holiness- <dd>God's Son is &quot;the brightness of His glory... the express image of His person.&quot; <a href="heb1.htm#3">Heb 1:3</a>
+<dt>At first reading, the meaning is unclear.<dd>Some of the newer translations have attempted to make this verse more readable.<dd>For example, the NASB: 
+<dd>&quot;In holy array, from the womb of the dawn, thy youth {ie., young men} are to thee as the dew.&quot;<br>However, this obscures the meaning by shifting focus from the Lord to an army of men. This is inconsistent with the rest of the Psalm, which never glances away from David's Lord. It is also inconsistent with the use of the phrase...
+<dt>the beauties {splendor} of holiness-<dd>This phrase is used elsewhere, always of the LORD's praiseworthiness (eg., <a href="psa29.htm#2">Psa 29:2</a>; <a href="psa96.htm#9">96:9</a>; <a href="2chr20.htm#21">2Chr 20:21</a>).
+<dd>God's Son is &quot;the brightness of His glory... the express image of His person.&quot; <a href="heb1.htm#3">Heb 1:3</a>
 <dd>Neither Israel's blindness, nor the world's darkness can dim His Holiness. 
 <dd>(Just as night hides, but does not diminish... the actual heat &amp; brightness of the sun.) 
 <blockquote>&quot;Holy, Holy, Holy, though the darkness hide thee,<br>
 Though the eye of sinful men thy glories may not see...&quot; [hymn]<br>
 cp. <a href="joh1.htm#4">Joh 1:4,5</a>; <a href="rom11.htm#25">Rom 11:25</a>; <a href="2cor4.htm#3">2Cor 4:3,4</a></blockquote>
 <dd>His people will finally recognize Him as the Holy One of Israel. <a href="isa60.htm#1">Isa 60:1,2</a> 
-<dt>the womb of the morning - It is from this womb, that Jesus was declared to be the Son of God.<dd>Yet it does not refer to Bethlehem. Jesus came into the world when it was night. The beauties of holiness were not conveyed to Him, by the virgin Mary's womb. Although Mary was God's chosen vessel, the 'holy thing' that was born of her, was not holy because of her, but rather, because He was the Son of the Highest, conceived by the Holy Spirit (<a href="luk1.htm#35">Luk 1:35</a>). Through physical birth, the Holy One became a man. But He had always been the Holy One. <a href="joh1.htm#14">Joh 1:14</a>; <a href="joh3.htm#19">3:19</a>; <a href="joh17.htm#1">17:1-5</a>
+<dt>the womb of the morning - It is from this womb, that Jesus was declared to be the Son of God.<dd>This does not refer to his birth in Bethlehem. Jesus came into the world when it was night. The beauties of holiness were not conveyed to Him, by the virgin Mary's womb. Although Mary was God's chosen vessel, the 'holy thing' that was born of her, was not holy because of her, but rather, because He was the Son of the Highest, conceived by the Holy Spirit (<a href="luk1.htm#35">Luk 1:35</a>). Through physical birth, the Holy One became a man. But He had always been the Holy One. <a href="joh1.htm#14">Joh 1:14</a>; <a href="joh3.htm#19">3:19</a>; <a href="joh17.htm#1">17:1-5</a>
 <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;However, we know He is God's Son, not because He emerged from the womb, but because He emerged from the tomb, one Sunday morning. <a href="mar16.htm#1">Mark 16:1-7</a>; see <a href="psa2.htm#7">Psa 2:7</a> with <a href="rom1.htm#4">Rom 1:4</a>
 <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Thus, in that future day, when the people of Israel finally recognize Him, they will see that their Messiah is not merely a son of David, but also God the Son: &quot;They shall look upon<i> Me </i>whom they have pierced...&quot; (<a href="zech12.htm#10">Zech 12:10</a>) 
 <dt>the dew of thy youth -<dd>His glory does not fade. He does not grow old, weak or weary. 
@@ -47,34 +49,38 @@ cp. <a href="joh1.htm#4">Joh 1:4,5</a>; <a href="rom11.htm#25">Rom 11:25</a>; <a
 Thou [art] a priest for ever after the order of Melchizedek. </b></i></dt><dl>
 <dt>Melchizedek first appears in scripture, when he met Abraham, as he returned from rescuing Lot and his neighbors from captivity, to a group of unfriendly kings. &quot;Melchizedek, King of Salem, brought forth bread and wine, and he was the priest of the Most High God.&quot; <a href="gen14.htm#18">Gen 14:18</a>
 <dd>Following that first mention, Melchizedek is mentioned again, only here in Psalm 110, and in chapters 5-7 of the book of Hebrews.
-<dt>The writer of Hebrews, quotes Psalm 110:4 in <a href="heb5.htm#5">&quot;Heb 5:5,6&quot;</a>, and then proceeds to develop<dd>several parallels between Melchizedek &amp; Christ (in <a href="heb7.htm#1">&quot;Heb 7:1-28&quot;</a>).<dd>Here are some of the major points...: 
+<dt>The writer of Hebrews, quotes <a href="psa2.htm#7">Psalm 2:7</a> and <a href="psa110.htm#4" target="lwr_lt">110:4</a> in <a href="heb5.htm#5">&quot;Heb 5:5,6&quot;</a>, and then proceeds to develop<dd>several parallels between Melchizedek &amp; Christ (in <a href="heb7.htm#1">&quot;Heb 7:1-28&quot;</a>).<dd>Here are some of the major points...: 
 <table border="1" cellpadding="5"
 <tr><th>Melchizedek</th><th>Christ</th></tr>
-<tr><td>-M. had no recorded beginning or end.</td><td>-Christ is at once Ancient, yet Ageless. </td></tr>
-<tr><td>-M. means &quot;King of Righteousness.&quot;</td><td>-Christ is Holy, undefiled, the Lord our Righteousness. </td></tr>
-<tr><td>-M. was also King of Salem (Peace). </td><td>-Christ is our peace. His reign will bring peace.<br><a href="isa32.htm#17">Isa 32:17</a>; <a href="rom5.htm#1">Rom 5:1</a>; <a href="eph2.htm#13">Eph 2:13,14</a></td></tr>
-<tr><td>-M. was both King &amp; Priest.</td><td>-Christ is the Anointed One in both senses.<br><a href="zech6.htm#12">Zech 6:12,13</a>; <a href="heb8.htm#1">Heb 8:1</a></td></tr>
+<tr><td>-M. was both King &amp; Priest. <a href="heb7.htm#1">Heb 7:1</a></td><td>-Christ is the Anointed One in both senses.<br><a href="zech6.htm#12">Zech 6:12,13</a>; <a href="heb8.htm#1">Heb 8:1</a></td></tr>
+<tr><td>-M. means &quot;King of Righteousness.&quot; <a href="heb7.htm#2">Heb 7:2</a></td><td>-Christ is Holy, undefiled, the Lord our Righteousness. </td></tr>
+<tr><td>-M. was also King of Salem (Peace). <a href="heb7.htm#2">Heb 7:2</a></td><td>-Christ is our peace. His reign will bring peace.<br><a href="isa32.htm#17">Isa 32:17</a>; <a href="rom5.htm#1">Rom 5:1</a>; <a href="eph2.htm#13">Eph 2:13,14</a></td></tr>
+<tr><td>-M. had no recorded beginning or end. <a href="heb7.htm#3">Heb 7:3</a></td><td>-Christ is at once Ancient, yet Ageless. <a href="mic5.htm#2">Mic 5:2</a></td></tr>
 <tr><td>-M. priesthood contrasts with Levitical priesthood.</td><td> -Christ (like Melchizedek):</td></tr>
-<tr><td>- - Superiority: seen in Abraham's tithes &amp; blessing.</td><td>- - receives greater honor than Levi.</td></tr>
-<tr><td>- - Death forced a succession of Levitical priests.</td><td>- - is &quot;a priest forever.&quot;</td></tr>
-<tr><td>- - Sin required their continuing sacrifices.</td><td>- - offered one sacrifice once for all.</td></tr>
-<tr><td>-M. offered no (recorded) blood sacrifice.<br>But he brought forth bread &amp; wine.</td><td>-Christ offered Himself as the only sacrifice of the M. priesthood.<br>Bread &amp; wine is His memorial.</td></tr></table>
-<dt>sworn...will not repent - The believer in Jesus Christ is secured by God's oath. 
-<dd>The Levitical system was established by the Mosaic Law. Christ's priesthood was established by God's unchangeable oath.
-<dd>The Levitical priests, sacrifices, and system were set aside, after Christ fulfilled their types. The New Testament, which Christ established in His blood, through His one sacrifice, as our High Priest, will never be superseded (<a href="heb7.htm#20">Heb 7:20-22</a>; <a href="heb6.htm#19">6:19,20</a>).
+<tr><td>- - Superiority: seen in Abraham's tithes &amp; blessing.</td><td>- - receives greater honor than Levi. <a href="heb7.htm#4">Heb 7:4-10</a></td></tr>
+<tr><td>- - Death forced a succession of Levitical priests.</td><td>- - is &quot;a priest forever.&quot; <a href="heb7.htm#23">Heb 7:23-25</a></td></tr>
+<tr><td>- - Sin required their continuing sacrifices.</td><td>- - offered one sacrifice once for all. <a href="heb7.htm#26">Heb 7:26-28</a><br>&nbsp; &nbsp; &nbsp; cp. <a href="heb10.htm#11">Heb 10:11-13</a> (v.13 alludes to <a href="psa110.htm#1" target="lwr_lt">Psa 110:1</a>)</td></tr>
+<tr><td>-M. offered no (recorded) blood sacrifice.<br>But he brought forth bread &amp; wine.</td><td>-Christ offered Himself as the only sacrifice of the M. priesthood.<br>Bread &amp; wine is His memorial. <a href="1cor11.htm#23">1Cor 11:23-26</a></td></tr></table>
+<dt>the LORD hath sworn...will not repent -
+<dd>The position, of Jesus Christ, as both King and Priest, is secured by God's oath. 
+<dd>The Levitical system was established by the Mosaic Law, which depends on our ability to obey (<a href="lev18.htm#5">Lev 18:5</a>).
+<dd>Christ's priesthood was established by God's unchangeable oath, which rests upon the immutability of His Word  (<a href="heb6.htm#17">Heb 6:17,18</a>).
+<dd>The Levitical priests, sacrifices, and system were set aside, after Christ fulfilled their types. The New Testament, which Christ established in His blood, through His one sacrifice, as our High Priest, will never be superseded (<a href="heb7.htm#20">Heb 7:20-22</a>).
+<dd>Therefore, those who trust in Christ are eternally secure (<a href="heb6.htm#19">Heb 6:19,20</a>).
 <dd>[For a more detailed discussion of Christ's priesthood after the order of Melchizedek, see the <a href="notemenu.htm" target="lwr_lt">Book Notes</a> at Hebrews ch. 5-7.]</dl>
 <dt><i><b>110:5 The Lord at thy right hand shall strike through kings in the day of his wrath. </b></i></dt><dl>
 <dt>Note the change of speaker: <dd><a href="psa110.htm#1" target="lwr_lt">vs.1-4</a>, The LORD speaks to David's Lord (Adon). 
 <dd><a href="psa110.htm#5" target="lwr_lt">vs.5-7</a>, David speaks: addressing the LORD, about his Lord (Adon), with prophetic insight. 
 <dt>The Lord at [the LORD's] right hand- is Christ. (cp. <a href="heb12.htm#2">Heb 12:2</a>; <a href="1pet3.htm#22">1Pet 3:22</a>)
 <dd>The word used for 'Lord' is HB= Adon.<br>'Adoni' (v.1) is the first person possessive form of Adon (ie., 'My Lord').<br>Adon usually refers to a human lord or master. Thus, David's 'Adon' is his superior.<br>- - However, David's Lord is also 'at the LORD's right hand,' that is side by side with God.<br>The word 'Adon' is closely related to the word 'Adonai'. 'Adonai' is<i> always </i>used as a name for God (translated as 'Lord'). The word 'Adon' is often used synonomously with 'Adonai,' in reference to God. Consider just a few examples:<ul>
-<li><a href="ex23.htm#17">Exodus 23:17</a>- 'The Lord (Adon) GOD.'<li><a href="deu10.htm#17">Deuteronomy 10:17</a>- 'The LORD your God is God of gods, and the Lord (Adon) of lords.' 
-<li><a href="josh3.htm#11">Joshua 3:11,13</a> - 'The Lord (Adon) of all the earth.'
+<li><a href="ex23.htm#17">Exodus 23:17</a>- 'The Lord (Adon) GOD {Jehovah}.'<li><a href="deu10.htm#17">Deuteronomy 10:17</a>- 'The LORD your God is God of gods, and the Lord (Adon) of lords.' 
+<li><a href="josh3.htm#11">Joshua 3:11,13</a> - 'The LORD, the Lord (Adon) of all the earth.'
 <li><a href="psa8.htm#1">Psalm 8:1</a>- 'O LORD, our Lord (Adon) how excellent is thy name in all the earth!'
-<li><a href="hos12.htm#14">Hosea 12:14</a> - 'Ephraim provoked him... his reproach shall his Lord (Adon) return unto him.'
+<li><a href="hos12.htm#13">Hosea 12:13,14</a> - 'The LORD... Ephraim provoked him... his reproach shall his Lord (Adon) return unto him.'
 <li><a href="mic4.htm#13">Micah 4:13</a> - '...I will consecrate their gain unto the LORD, and their substance unto the Lord (Adon) of the whole earth.'
 <li><a href="zech4.htm#14">Zechariah 4:14</a> - '...that stand before the Lord (Adon) of the whole earth.'
-<li><a href="mal3.htm#1">Malachi 3:1-3</a> 'The Lord (Adon) whom you seek, shall suddenly come to His temple, even the messenger of the Covenant... he shall come.'<br>-- This last passage shows us that the Messiah (Christ) is both the Lord of lords (the man who is above all men), and the LORD who alone can rightly occupy His Temple, and who alone has the right to judge His people.</ul>
+<li><a href="mal3.htm#1">Malachi 3:1-3</a> 'The Lord (Adon) whom you seek, shall suddenly come to His temple, even the messenger of the Covenant... he shall come.'</ul>
+<dd>The above passages show that the Messiah (Christ) is both the Lord of lords (the man who is above all men), and the LORD (the ever-living, self-sufficient One) who alone can rightly occupy His Temple. Christ alone has the right and power to judge all men (<a href="joh5.htm#22">Joh 5:22,23</a>).
 <dt>{He} shall strike through kings, in the day of His wrath.- <dd>The occasion is the battle of Armageddon. <a href="rev19.htm#11">Rev 19:11-16</a> </dl>
 <dt><i><b>110:6 He shall judge among the heathen </i></b>{ie., the nations}<b><i>,<br>
 he shall fill [the places] with the dead bodies; </b></i></dt><dl>
@@ -87,8 +93,8 @@ he shall fill [the places] with the dead bodies; </b></i></dt><dl>
 therefore shall he lift up the head.</b></i></dt><dl>
 <dt>The Great Tribulation period, which immediately precedes Christ's return, 
 <dd>will be marked by death, destruction, &amp; ecological catastrophe (including waters turned to blood: made bitter &amp; undrinkable). Heads will hang down in despair. 
-<dt>Christ will usher in &quot;the times of refreshing.&quot;
-<dd>In the day when He drinks from the brook, the nations will find healing.<br><a href="joel3.htm#18">Joel 3:18</a>; <a href="rev22.htm#1">Rev 22:1,2</a>; <a href="act3.htm#19">Acts 3:19-21</a></dl></dl><br>
+<dt>Christ will usher in &quot;the times of refreshing.&quot; (<a href="act3.htm#19">Acts 3:19-21</a>).
+<dd>In the day when He drinks from the brook, the nations will find healing.<br><a href="psa72.htm#6">Psa 72:6-8</a>; <a href="joel3.htm#18">Joel 3:18</a>; <a href="rev22.htm#1">Rev 22:1,2</a></dl></dl><br>
 <center>This Concludes the study in Psalm 110.<br>
 Click here to begin the study in <a href="ps116n.htm" target="upper">Psalm 116</a>
 <br>Return to <a href="psm_menu.htm" target="lwr_lt">Psalms of Messiah - MENU page</a>.<br>
