--- a/www/the_book/rom_mnu.htm
+++ b/www/the_book/rom_mnu.htm
@@ -5,8 +5,8 @@
 <body bgcolor="#80ffff">
 <center><h2>Romans</h2>
 <b>Book Outline &amp; Menu of Notes</b></center><br>
-<a href="notekey.htm" target="lwr_lt"><b>Key &amp; Guide to Notes</b></a><dl><br>
-<center><b>Outline of Romans</b><br>(Links are to chapter notes.)</center>
+<a href="notekey.htm" target="lwr_lt"><b>Key &amp; Guide to Notes</b></a>
+<center><b>Outline of Romans</b><br>(Links are to chapter notes.)</center><dl>
 <dt><b>I. Greetings and Theme - </b>
 <dd><b>A.</b> Greetings, <a href="rom1an.htm" target="upper"><b>Romans 1</b></a>:1-7
 <dd><b>B.</b> Paul's interest, 1:8-15
