--- a/www/the_book/sktchnt.htm
+++ b/www/the_book/sktchnt.htm
@@ -5,14 +5,13 @@
 <body bgcolor="#ffff80">
 <body>
 <a name="sketches"></a><center><b>Sketches of the<br>New Testament books</b></center>
-<dl><dt>Each 'sketch' provides a brief overview of one book of the New Testament. <dd>These sketches are intended to supplement your reading of each book of the Bible (rather than as a substitute for reading the Bible text). Links within the sketch provide access to Bible text. In most cases, the text of the book under study will display in the lower left window, while supplemental references will display in the lower right window.<br>
+<dl><dt>Each 'sketch' provides a brief overview of one book of the New Testament.<dd>These sketches are intended to supplement your reading of each book of the Bible (rather than as a substitute for reading the Bible text). Links within the sketch provide access to Bible text. In most cases, the text of the book under study will display in the lower left window, while supplemental references will display in the lower right window.<dd>&nbsp;
 <dt>Each 'sketch' consists of a chapter from the book:
 <dd><i>''Christ in All the Scriptures,'' </i>by A.M. Hodgkin.<br> 
-Each chapter focuses on a particular aspect of Christ's Person and  work as it is seen in a specific book of the Bible.<br><br>
-Ninety percent of A.M.Hodgkin's volume deals with the Old Testament. At present, only the New Testament portion is included here. We hope to make the entire book available on this site, in the near future.
-<br><br>
-For more detailed discussion of individual books of the Bible, see the <a href="notemenu.htm" target="lwr_lt">Book Notes</a> (where they are included for the specific book).<br>
-<dt><i>Christ in All the Scriptures</i>, by A.M. Hodgkin, was originally published in 1909. <dd>It was reprinted, and copyrighted in 1989, by Barbour and Company, Inc., <br>164 Mill Street, Westwood, NJ 07675, USA.<br>It is used here by permission of the publisher.</dl>
+Each chapter focuses on a particular aspect of Christ's Person and work as it is seen in a specific book of the Bible.<dd>&nbsp;
+<dd>Ninety percent of A.M.Hodgkin's volume deals with the Old Testament. While the New Testament portion provides sketches of NT books, on this site, the OT section is also available. It can be accessed via the <a href="int_menu.htm#refl" target="lwr_lt">Resource Menu.</a> (also accessible through the <i>Resource Menu</i> button). The two introductory chapters are very important, and should not be skipped over.<dd>&nbsp;
+<dt>For more detailed discussion of individual books, see the <a href="notemenu.htm" target="lwr_lt">Book Notes</a> (also accessible through the <i>Book Notes</i> button).<dd>Book Notes are available for many, but not yet all Bible books.<dd>&nbsp;
+<dt><i>Christ in All the Scriptures</i>, by A.M. Hodgkin, was originally published in 1909.<dd>It was reprinted, and copyrighted in 1989, by Barbour and Company, Inc.,<br>164 Mill Street, Westwood, NJ 07675, USA.<br>It is used here by permission of the publisher.</dl>
 <hr width=60% align=center size=1>
 <center>Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
 </body>
