--- a/www/the_book/littype.htm
+++ b/www/the_book/littype.htm
@@ -12,24 +12,24 @@ The historical books of the Old Testament reveal how God is involved in human hi
 <dd>References for study of these books: <ul><li><a href="timelnot.htm" target="_blank">OT Time line</a>
 <li><a href="kingchrt.htm" target="_blank">Chart of Israel's Kings and Prophets</a></ul><br>
 <dt><a name="OT-Poetry"><b>OT - Poetry &amp; Wisdom</b></a><br>
-These books express the range of human emotions confronted with the tensions of life, and the character of God. Love, joy, anger, despair and faith are voiced in song, prayer, proverb and riddle. <dd> Examples:  <a href="ecc3.htm#1">Eccl 3:1-9</a>; <a href="psa124.htm">Psa 124</a><br><br>
+These books express the range of human emotions confronted with the tensions of life, and the character of God. Love, joy, anger, despair and faith are voiced in song, prayer, proverb and riddle. <dd> Examples:  <a href="ecc3.htm#1">Eccl 3:1-9</a>; <a href="psa124.htm">Psa 124</a><dd>&nbsp;
 
 <dt><a name="OT-Proph"><b>OT - Prophecy</b></a><br>
 During times when Israel wandered from the Lord, He profoundly impressed certain men to make His message emphatically clear to His people.  The prophets reminded them of God's Law and of the consequences of disobedience. They spoke of impending judgment and also of future blessing when the Messiah would come to restore right relationship between God &amp; man.<dd>Examples:  <a href="amos5.htm#21">Amos 5:21-27</a>; <a href="isa53.htm#1">Isa 53:1-12</a>
 <dd>References for study of these books: <ul><li><a href="timelnot.htm" target="_blank">OT Time line</a>
-<li><a href="kingchrt.htm" target="_blank">Chart of Israel's Kings and Prophets</a></ul><br>
+<li><a href="kingchrt.htm" target="_blank">Chart of Israel's Kings and Prophets</a></ul><dd>&nbsp;
 
 <dt><a name="NT-H"><b>NT - History</b></a><br>
 The four Gospels are based on the accounts of eyewitnesses who heard and saw Jesus of Nazareth.  They identify Him as the Messiah who fulfills the Old Testament prophecies.
 <br>The book of Acts goes on to show what took place after the death and resurrection of Jesus, and how the church of Christ grew within the Jewish and Gentile worlds.
 <dd>Examples:  <a href="luk1.htm#1">Luk 1:1-4</a>; <a href="joh20.htm#30">Joh 20:30,31</a>; <a href="act1.htm#1">Acts 1:1-3</a>
-<dd>References:<ul><li><a href="timelnnt.htm" target="_blank">NT Time line</a><li><a href="ntchron.htm" target="_blank">NT Chronology chart</a></ul><br>
+<dd>References:<ul><li><a href="timelnnt.htm" target="_blank">NT Time line</a><li><a href="ntchron.htm" target="_blank">NT Chronology chart</a></ul><dd>&nbsp;
 
 <dt><a name="NT-L"><b>NT - Letters</b></a> (or, Epistles)<br>
 These letters were written by leaders of the early church, to answer questions of doctrine (teaching) and practise, and to provide correction &amp; guidance for christian living.  A few letters were addressed to individual believers.  Most were sent to churches, or regional groups of churches.  They provide believers today with practical insight into what it means to live for Christ.
 <dd>Examples:  <a href="tit3.htm#3">Titus 3:3-8</a>; <a href="rom12.htm#1">Rom 12:1,2</a>; <a href="1joh3.htm#1">1Joh 3:1-3</a>
 <dd>References:<ul><li><a href="timelnnt.htm" target="_blank">NT Time line</a><li><a href="ntchron.htm" target="_blank">NT Chronology chart</a>
-<li><a href="epistles.htm" target="_blank">NT Epistles- Authors and Themes (chart)</a></ul><br>
+<li><a href="epistles.htm" target="_blank">NT Epistles- Authors and Themes (chart)</a></ul><dd>&nbsp;
 
 <dt><a name="NT-Proph"><b>NT - Prophecy</b></a><br>
 &quot;The Revelation of Jesus Christ&quot; is the last book of the Bible. In it, Christ reveals Himself to us in His present &amp; future glory;  He warns the church of its drift into apostasy;  He foretells the terrible conditions which will exist on the earth just before His return, and He assures His people that He (and they with Him) will overcome the powers of evil.
